force-app/main/default/objects/Opportunity/fields/stayclassy__dedication_contact_zip__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__dedication_contact_zip__c</fullName>
    <label>Dedication Contact Zip</label>
    <length>15</length>
    <type>Text</type>
</CustomField>