force-app/main/default/objects/Opportunity/fields/stayclassy__Dedication_Ecard_ID__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Dedication_Ecard_ID__c</fullName>
    <description>Classy ID of the dedication Ecard record</description>
    <inlineHelpText>Classy ID of the dedication Ecard record</inlineHelpText>
    <label>Dedication Ecard ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>