force-app/main/default/objects/Opportunity/fields/stayclassy__Dedication_Ecard_Request__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Dedication_Ecard_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dedication eCard Request</label>
    <type>Checkbox</type>
</CustomField>