force-app/main/default/objects/Opportunity/fields/stayclassy__Dedication_Email_Body__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Dedication_Email_Body__c</fullName>
    <label>Dedication Body</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>