force-app/main/default/objects/Opportunity/fields/stayclassy__Dedication_First_Name__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Dedication_First_Name__c</fullName>
    <label>Dedication First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>