force-app/main/default/objects/Opportunity/fields/stayclassy__Dedication_ID__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Dedication_ID__c</fullName>
    <description>The Classy ID for the Dedication object.</description>
    <inlineHelpText>The Classy ID for the Dedication object.</inlineHelpText>
    <label>Classy Dedication ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>