force-app/main/default/objects/Opportunity/fields/stayclassy__dedication_include_gift_amount__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__dedication_include_gift_amount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the dedication donation should include the amount of the gift in correspondence.</description>
    <label>Dedication Include Gift Amount</label>
    <type>Checkbox</type>
</CustomField>