force-app/main/default/objects/Opportunity/fields/stayclassy__dedication_type__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__dedication_type__c</fullName>
    <label>Dedication Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>