force-app/main/default/objects/Opportunity/fields/stayclassy__Device_Type__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Device_Type__c</fullName>
    <formula>IF (
!ISBLANK(stayclassy__Browser_Info__c), (
  IF (
    (CONTAINS(LOWER(stayclassy__Browser_Info__c), &quot;android&quot;)) ||
    (CONTAINS(LOWER(stayclassy__Browser_Info__c), &quot;iphone&quot;)) ||
    (CONTAINS(LOWER(stayclassy__Browser_Info__c), &quot;ipad&quot;)) ||
    (CONTAINS(LOWER(stayclassy__Browser_Info__c), &quot;blackberry&quot;)) ||
    (CONTAINS(LOWER(stayclassy__Browser_Info__c), &quot;opera mini&quot;)) ||
    (CONTAINS(LOWER(stayclassy__Browser_Info__c), &quot;opera mobi&quot;)) ||
    (CONTAINS(LOWER(stayclassy__Browser_Info__c), &quot;iemobile&quot;))
  ,&apos;Mobile&apos;,
  &apos;Desktop&apos;)
), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Device Type</label>
    <type>Text</type>
</CustomField>