force-app/main/default/objects/Opportunity/fields/stayclassy__Discount_Code__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Discount_Code__c</fullName>
    <description>Name of the discount code applied to an orderv (The code of the promo code applied to the transaction.)</description>
    <label>Promo Code</label>
    <length>45</length>
    <type>Text</type>
</CustomField>