force-app/main/default/objects/Opportunity/fields/stayclassy__Discount_Total__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Discount_Total__c</fullName>
    <description>The total value the transaction&apos;s total_gross_amount has been adjusted.</description>
    <label>Adjustment Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>