force-app/main/default/objects/Opportunity/fields/stayclassy__donation_total__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__donation_total__c</fullName>
    <label>Donation Total</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>