force-app/main/default/objects/Opportunity/fields/stayclassy__Fundraising_Page__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Fundraising_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fundraising Page</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Opportunities (Fundraiser)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>