force-app/main/default/objects/Opportunity/fields/stayclassy__Fundraising_Team__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Fundraising_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fundraising Team</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Opportunities (Team)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>