force-app/main/default/objects/Opportunity/fields/stayclassy__gateway_name__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__gateway_name__c</fullName>
    <label>Payment Gateway Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>