force-app/main/default/objects/Opportunity/fields/stayclassy__gateway_transaction_id__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__gateway_transaction_id__c</fullName>
    <description>Classy payment gateway processor id, which is referred as &quot;Processor ID&quot; on Classy report.</description>
    <label>Processor ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>