force-app/main/default/objects/Opportunity/fields/stayclassy__Hide_Donation_Amount__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Hide_Donation_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, indicates that the amount of a donation will not be displayed on a Classy page</description>
    <label>Hide Donation Amount</label>
    <type>Checkbox</type>
</CustomField>