force-app/main/default/objects/Opportunity/fields/stayclassy__Hide_Donation_Comment__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Hide_Donation_Comment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, hides the donor comment and prevents it from being displayed on Classy pages</description>
    <label>Hide Donation Comment</label>
    <type>Checkbox</type>
</CustomField>