force-app/main/default/objects/Opportunity/fields/stayclassy__Honoree_First_Name__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Honoree_First_Name__c</fullName>
    <description>Dedication Honoree First Name</description>
    <inlineHelpText>Dedication Honoree First Name</inlineHelpText>
    <label>Honoree First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>