force-app/main/default/objects/Opportunity/fields/stayclassy__Honoree_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Honoree_Last_Name__c</fullName>
    <description>Dedication Honoree Last Name</description>
    <inlineHelpText>Dedication Honoree Last Name</inlineHelpText>
    <label>Honoree Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>