force-app/main/default/objects/Opportunity/fields/stayclassy__host_total__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__host_total__c</fullName>
    <label>Host Total</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>