force-app/main/default/objects/Opportunity/fields/stayclassy__Is_a_Matched_Gift__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Is_a_Matched_Gift__c</fullName>
    <description>Indicates if the Opportunity is a matched gift on the Classy platform.</description>
    <formula>IF(stayclassy__Parent_Transaction_ID__c &gt; 0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is a Matched Gift?</label>
    <type>Checkbox</type>
</CustomField>