force-app/main/default/objects/Opportunity/fields/stayclassy__Is_Gift_Aid_Eligible__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Is_Gift_Aid_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For donations to UK charitable entities, a donor can select to mark the donation as &quot;Gift Aide&quot; for the purposes of reducing the tax burden on the NPO.</description>
    <inlineHelpText>For donations to UK charitable entities, a donor can select to mark the donation as &quot;Gift Aide&quot; for the purposes of reducing the tax burden on the NPO.</inlineHelpText>
    <label>Is Gift Aid Eligible</label>
    <type>Checkbox</type>
</CustomField>