force-app/main/default/objects/Opportunity/fields/stayclassy__net_donation__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__net_donation__c</fullName>
    <description>Net donation after fees</description>
    <label>Classy Net Donation</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>