force-app/main/default/objects/Opportunity/fields/stayclassy__Normalized_Gross_Donation_Amount__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Normalized_Gross_Donation_Amount__c</fullName>
    <label>Normalized Gross Donation Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>