force-app/main/default/objects/Opportunity/fields/stayclassy__Offline_Donation__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Offline_Donation__c</fullName>
    <formula>IF (
  stayclassy__gateway_name__c = &apos;Offline&apos; || CONTAINS(stayclassy__gateway_name__c, &apos;Offline&apos;)
,true
,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offline Donation</label>
    <type>Checkbox</type>
</CustomField>