force-app/main/default/objects/Opportunity/fields/stayclassy__order_date__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__order_date__c</fullName>
    <label>Transaction Date</label>
    <type>DateTime</type>
</CustomField>