force-app/main/default/objects/Opportunity/fields/stayclassy__Organization_ID__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Organization_ID__c</fullName>
    <description>The Classy Organization ID associated with a transaction.</description>
    <label>Classy Organization ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>