force-app/main/default/objects/Opportunity/fields/stayclassy__Parent_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Parent_Transaction_ID__c</fullName>
    <description>For Classy donations that were matched, this indicates the transaction ID that was the initiating transaction for a match.  If this field has a value then the transaction is a match.</description>
    <label>Parent Transaction ID</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>