force-app/main/default/objects/Opportunity/fields/stayclassy__Partial_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Partial_Refund_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>If checked, indicates the amount of the original donation amount that was refunded.</description>
    <label>Partial Refund Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>