force-app/main/default/objects/Opportunity/fields/stayclassy__Payment_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Payment_Account_Number__c</fullName>
    <description>The account number of the payment method used. In case of ACH, it will be the last four digits of the bank account number.</description>
    <inlineHelpText>The account number of the payment method used. In case of ACH, it will be the last four digits of the bank account number.</inlineHelpText>
    <label>Payment Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>