force-app/main/default/objects/Opportunity/fields/stayclassy__Payment_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Payment_Account_Type__c</fullName>
    <description>The account type of the payment method, such as checking or saving if ACH is used.</description>
    <inlineHelpText>The account type of the payment method, such as checking or saving if ACH is used.</inlineHelpText>
    <label>Payment Account Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>