force-app/main/default/objects/Opportunity/fields/stayclassy__Payment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Payment_End_Date__c</fullName>
    <description>For a recurring donation, indicates the end date of the recurring donation.</description>
    <label>Payment End Date</label>
    <type>Date</type>
</CustomField>