force-app/main/default/objects/Opportunity/fields/stayclassy__Payment_Fee_On_Top__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Payment_Fee_On_Top__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this field indicates that the donor has elected to pay the portion of Classy fees associated with the donation.</description>
    <inlineHelpText>If checked, this field indicates that the donor has elected to pay the portion of Classy fees associated with the donation.</inlineHelpText>
    <label>Donor Selected Classy Mode</label>
    <type>Checkbox</type>
</CustomField>