force-app/main/default/objects/Opportunity/fields/stayclassy__Payment_Institution__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Payment_Institution__c</fullName>
    <description>The name of the company that handles payment. In the case of ACH, it will be the bank name.</description>
    <inlineHelpText>The name of the company that handles payment. In the case of ACH, it will be the bank name.</inlineHelpText>
    <label>Payment Institution</label>
    <length>50</length>
    <type>Text</type>
</CustomField>