force-app/main/default/objects/Opportunity/fields/stayclassy__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Payment_Method__c</fullName>
    <description>Payment method (can be credit card, check, cash, PayPal, etc.)</description>
    <label>Payment Method</label>
    <length>40</length>
    <type>Text</type>
</CustomField>