force-app/main/default/objects/Opportunity/fields/stayclassy__PaymentID__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__PaymentID__c</fullName>
    <label>Payment ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>