force-app/main/default/objects/Opportunity/fields/stayclassy__Raw_Overhead_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Raw_Overhead_Net_Amount__c</fullName>
    <label>Raw Overhead Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>