force-app/main/default/objects/Opportunity/fields/stayclassy__refund_date__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__refund_date__c</fullName>
    <label>Refund Date</label>
    <type>DateTime</type>
</CustomField>