force-app/main/default/objects/Opportunity/fields/stayclassy__sc_order_id__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__sc_order_id__c</fullName>
    <externalId>true</externalId>
    <label>Classy Transaction ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>