force-app/main/default/objects/Opportunity/fields/stayclassy__sf_contact_id__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__sf_contact_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact associated with a transaction</description>
    <label>Classy Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Classy Donations</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>