force-app/main/default/objects/Opportunity/fields/stayclassy__sf_designation_id__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__sf_designation_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Classy Designation</label>
    <referenceTo>stayclassy__sc_designation__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>