force-app/main/default/objects/Opportunity/fields/stayclassy__sf_order_id__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__sf_order_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field for the Classy Transactions record for this Opportunity</description>
    <label>Classy Transaction - DEPRECATED</label>
    <referenceTo>stayclassy__sc_order__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>