force-app/main/default/objects/Opportunity/fields/stayclassy__Sync_Offline_Donation__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Sync_Offline_Donation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When creating an offline donation, check this box to sync transaction with the Classy App</description>
    <inlineHelpText>Check box to sync offline donation with the Classy APP.  
REQUIRED FIELDS: 
Opportunity Name, 
Amount, 
Close Date, 
Stage, 
Primary Campaign Source, 
Payment Method, 
Billing First Name and 
Billing Last Name</inlineHelpText>
    <label>Sync as Offline Donation</label>
    <type>Checkbox</type>
</CustomField>