force-app/main/default/objects/Opportunity/fields/stayclassy__Transaction_Metadata__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Transaction_Metadata__c</fullName>
    <description>JSON representation of metadata associated with the transaction</description>
    <label>Transaction Metadata</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>