force-app/main/default/objects/Opportunity/fields/stayclassy__Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Transaction_Status__c</fullName>
    <description>Classy Transaction Status: success: ,incomplete, canceled, refunded, cb_initiated,cb_lost,test</description>
    <label>Transaction Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>