force-app/main/default/objects/Opportunity/fields/stayclassy__transaction_total__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__transaction_total__c</fullName>
    <label>Transaction Fees</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>