force-app/main/default/objects/Opportunity/fields/stayclassy__Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Transaction_Type__c</fullName>
    <description>Indicates the type of transaction (donation, ticket, or registration)</description>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Donation</fullName>
            </value>
            <value>
                <fullName>Ticket</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>