force-app/main/default/objects/Opportunity/recordTypes/Corporate.recordType-meta.xml
<RecordType>
    <fullName>Corporate</fullName>
    <active>true</active>
    <businessProcess>Donation</businessProcess>
    <description>Donation from Corporate Organization</description>
    <label>Corporate</label>
</RecordType>