force-app/main/default/objects/Opportunity/recordTypes/stayclassy__Default.recordType-meta.xml
<RecordType>
    <fullName>stayclassy__Default</fullName>
    <active>false</active>
    <businessProcess>stayclassy__Default Sales Process</businessProcess>
    <label>Default</label>
</RecordType>