force-app/main/default/objects/Opportunity/recordTypes/stayclassy__stayclassy.recordType-meta.xml
<RecordType>
    <fullName>stayclassy__stayclassy</fullName>
    <active>true</active>
    <businessProcess>stayclassy__Default Sales Process</businessProcess>
    <description>Data inserted via Classy</description>
    <label>Classy</label>
</RecordType>