force-app/main/default/objects/Opportunity/listViews/All_Matching_Donations.listView-meta.xml
<ListView>
    <fullName>All_Matching_Donations</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.MatchingDonation</value>
    </filters>
    <label>All Matching Donations</label>
</ListView>