force-app/main/default/objects/Opportunity/listViews/All_Opportunities.listView-meta.xml
<ListView>
    <fullName>All_Opportunities</fullName>
    <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <columns>Cheerful_Transaction_ID__c</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>stayclassy__Transaction_Status__c</columns>
    <columns>OPPORTUNITY.WON</columns>
    <columns>OPPORTUNITY.CLOSED</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Membership</value>
    </filters>
    <label>All Opportunities</label>
</ListView>