force-app/main/default/objects/Opportunity/listViews/All_Opportunities_to_Sync.listView-meta.xml
<ListView>
    <fullName>All_Opportunities_to_Sync</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>AVSFQB__Quickbooks_Id__c</columns>
    <columns>AVSFQB__QB_Error__c</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AVSFQB__Generate_Object__c</field>
        <operation>equals</operation>
        <value>Invoice</value>
    </filters>
    <filters>
        <field>AVSFQB__Quickbooks_Id__c</field>
        <operation>equals</operation>
    </filters>
    <label>All Opportunities to Sync</label>
</ListView>