force-app/main/default/objects/Opportunity/listViews/AllDonations.listView-meta.xml
<ListView>
    <fullName>AllDonations</fullName>
    <columns>Closed_Month__c</columns>
    <columns>Current_Month__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>npsp__Primary_Contact__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Prospecting,Closed/Won</value>
    </filters>
    <label>All Donations - Prospecting</label>
</ListView>