force-app/main/default/objects/Opportunity/listViews/New_This_month.listView-meta.xml
<ListView>
    <fullName>New_This_month</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.WON</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>New This month</label>
</ListView>